# sinewave

./: COPYING  README.md  github.aeldemery.sinewave.json  meson.build  uncrustify.cfg
builddir/: .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev
data/: github.aeldemery.sinewave.appdata.xml.in  github.aeldemery.sinewave.desktop.in  github.aeldemery.sinewave.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: SineWaveWidget.vala  main.vala  meson.build  sinewave.gresource.xml  window.vala
